--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap');
 html,
 body {
     min-width: 290px;
     color: #4d4e53;
     background-color: #ffffff;
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: 'Montserrat Alternates', sans-serif;
     line-height: 1.5;
 }
 
@@ -79,10 +80,11 @@ code {
     word-break: normal;
     word-wrap: normal;
     line-height: 2;
-    background-color: #f7f7f7;
+    background-color: black;
     padding: 15px;
     margin: 10px;
     border-radius: 5px;
+    color: aliceblue;
 }
 
 @media only screen and (max-width: 815px) {
